k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cet-word
  labels:
    app.kubernetes.io/part-of: cet-word-master
